Show URL textarea disabled instead of readonly

--- a/html-builder.html
+++ b/html-builder.html
@@ -1192,7 +1192,7 @@ function toggleFields() {
                 <p>Click on <abbr title="Uniform Resource Locator">URL</abbr> to select and then copy it.</p>
 				<p>Note: do not change the URL from below. Even "small" changes may break our ability to report, and may even mean that the donation may not appear in our reports at all.</p>
             	<div class="output" id="html">
-            		<p class="showUrlBox"><label for="url">Code to use <textarea style="background: rgb(241, 241, 241) none repeat scroll 0% 0%; height: 256px;" placeholder="Code will appear here after filling out the above form" id="url" readonly></textarea></label></p>
+            		<p class="showUrlBox"><label for="url">Code to use <textarea style="background: rgb(241, 241, 241) none repeat scroll 0% 0%; height: 256px;" placeholder="Code will appear here after filling out the above form" id="url" disabled></textarea></label></p>
                 <p id="urlHidden" class="alert">Due to your selections above, there is no tracked link to copy.</p>
             	</div>
             <br><br><br><br>
