remove campaign list
commented out given new set-up

--- a/html-builder.html
+++ b/html-builder.html
@@ -1603,7 +1603,8 @@ function toggleFields() {
 			{"name":"Prestige Positions","id":"Prestige Positions"},
 		];
 
-	var campaignoptions = [
+// replaced with campaign.js and google sheet set-up
+/*	var campaignoptions = [
 		{"name":"","id":""},
 		{"name":"Donate - Complex Emergencies","id":"Complex Emergencies Appeal"},
 		{"name":"Donate - Cyclone Idai","id":"Cyclone Idai Appeal"},
@@ -1660,7 +1661,8 @@ function toggleFields() {
 		{"name":"Volunteering","id":"Volunteering"},
 		{"name":"Other","id":"Other"}
 	];
-	
+	*/
+
 	// $('#campaignselect').dropdown({
     //   readOnly: true,
     //   input: '<input type="text" maxLength="20" placeholder="Search">',
