Audience data pulled from spreadsheet

--- a/html-builder.html
+++ b/html-builder.html
@@ -1202,6 +1202,7 @@ function toggleFields() {
     </div>
 </div>
 <script src="campaign.js"></script>
+<script src="audience.js"></script>
 <script>
 	function updateOutput()
         {
@@ -1670,41 +1671,41 @@ function toggleFields() {
     //   searchable: true,
 	// });
 	
-  	$('#socialadaudiencecontainer1').dropdown({
-		multipleMode: 'label',
-		limitCount: 4,
-		input: '<input type="text" maxLength="20" placeholder="Search">',
-		data: targetingoptions,
-		searchable: true,
-	});
-  	$('#socialadaudiencecontainer2').dropdown({
-		multipleMode: 'label',
-		limitCount: 4,
-		input: '<input type="text" maxLength="20" placeholder="Search">',
-		data: targetingoptions,
-		searchable: true,
-	});
-  	$('#socialadaudiencecontainer3').dropdown({
-		multipleMode: 'label',
-		limitCount: 4,
-		input: '<input type="text" maxLength="20" placeholder="Search">',
-		data: targetingoptions,
-		searchable: true,
-	});
-  	$('#socialadaudiencecontainer4').dropdown({
-		multipleMode: 'label',
-		limitCount: 4,
-		input: '<input type="text" maxLength="20" placeholder="Search">',
-		data: targetingoptions,
-		searchable: true,
-	});
-  	$('#socialadaudiencecontainer5').dropdown({
-		multipleMode: 'label',
-		limitCount: 4,
-		input: '<input type="text" maxLength="20" placeholder="Search">',
-		data: targetingoptions,
-		searchable: true,
-	});
+  	// $('#socialadaudiencecontainer1').dropdown({
+	// 	multipleMode: 'label',
+	// 	limitCount: 4,
+	// 	input: '<input type="text" maxLength="20" placeholder="Search">',
+	// 	data: targetingoptions,
+	// 	searchable: true,
+	// });
+  	// $('#socialadaudiencecontainer2').dropdown({
+	// 	multipleMode: 'label',
+	// 	limitCount: 4,
+	// 	input: '<input type="text" maxLength="20" placeholder="Search">',
+	// 	data: targetingoptions,
+	// 	searchable: true,
+	// });
+  	// $('#socialadaudiencecontainer3').dropdown({
+	// 	multipleMode: 'label',
+	// 	limitCount: 4,
+	// 	input: '<input type="text" maxLength="20" placeholder="Search">',
+	// 	data: targetingoptions,
+	// 	searchable: true,
+	// });
+  	// $('#socialadaudiencecontainer4').dropdown({
+	// 	multipleMode: 'label',
+	// 	limitCount: 4,
+	// 	input: '<input type="text" maxLength="20" placeholder="Search">',
+	// 	data: targetingoptions,
+	// 	searchable: true,
+	// });
+  	// $('#socialadaudiencecontainer5').dropdown({
+	// 	multipleMode: 'label',
+	// 	limitCount: 4,
+	// 	input: '<input type="text" maxLength="20" placeholder="Search">',
+	// 	data: targetingoptions,
+	// 	searchable: true,
+	// });
 	
 	// end trial searchable dropdown code
 
