Added integrated brand campaign goals steps (brand/fundraising) Added TikTok/Unknown as social post sources

--- a/index.html
+++ b/index.html
@@ -797,6 +797,8 @@ function toggleFields() {
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Brand">Integrated campaign goal = brand</option>
+		<option value="Fundraising">Integrated campaign goal = fundraising</option>
 		</select>
         </label>
         </p>
@@ -928,6 +930,8 @@ function toggleFields() {
 		<option value="Instagram">Instagram</option>
 		<option value="Youtube">Youtube</option>
 		<option value="LinkedIn">LinkedIn</option>
+		<option value="TikTok">TikTok</option>
+		<option value="Unknown">Unknown (e.g. links for celebrities)</option>
 		</select>
         </label>
         </p>
@@ -1142,6 +1146,8 @@ function toggleFields() {
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Brand">Integrated campaign goal = brand</option>
+		<option value="Fundraising">Integrated campaign goal = fundraising</option>
 		</select>
         </label>
         </p>
