Added 'other' path

--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").hide() && 
 		$("#urlHidden").show();
+	
 	else if ($("#medium").val() === "Organic Search")
         $("#mediumPPCSearch").hide() &&
 		$("#mediumOrganicSearch").show() &&
@@ -92,6 +94,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").hide() &&
 		$("#urlHidden").show();
@@ -108,9 +111,11 @@ function toggleFields() {
 		$("#mediumReferral").show() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
+	
 	else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "Yes" && ($("#socialadsource").val() === "Facebook" || $("#socialadsource").val() === "Instagram") )
         $("#mediumPPCSearch").hide() &&
 		$("#mediumOrganicSearch").hide() &&
@@ -128,6 +133,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -149,6 +155,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -170,6 +177,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -191,6 +199,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -212,6 +221,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -233,6 +243,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -254,6 +265,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -275,6 +287,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -292,6 +305,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -309,6 +323,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -325,6 +340,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -341,6 +357,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$("#audienceSocialPost").hide() &&
 		$(".showUrlBox").show() &&
@@ -358,6 +375,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$("#audienceSocialPost").show() &&
 		$(".showUrlBox").show() &&
@@ -375,6 +393,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -391,6 +410,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -407,6 +427,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").show() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -423,6 +444,24 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").show() &&
+		$("#mediumOther").hide() &&
+		$("#mediumRocketseed").hide() &&
+		$(".showUrlBox").show() &&
+		$("#urlHidden").hide();
+		
+	else if ($("#medium").val() === "Unknown")
+        $("#mediumPPCSearch").hide() &&
+		$("#mediumOrganicSearch").hide() &&
+		$("#mediumBanner").hide() &&
+		$("#mediumEmail").hide() &&
+		$("#mediumSocialAd").hide() &&
+		$("#mediumSocialPost").hide() &&
+		$("#mediumSocialShare").hide() &&
+		$("#mediumSocialButton").hide() &&
+		$("#mediumReferral").hide() &&
+		$("#mediumInternal").hide() &&
+		$("#mediumOffline").hide() &&
+		$("#mediumOther").show() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -439,6 +478,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").show() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -454,6 +494,7 @@ function toggleFields() {
 		$("#mediumReferral").hide() &&
 		$("#mediumInternal").hide() &&
 		$("#mediumOffline").hide() &&
+		$("#mediumOther").hide() &&
 		$("#mediumRocketseed").hide() &&
 		$(".showUrlBox").show() &&
 		$("#urlHidden").hide();
@@ -515,6 +556,7 @@ function toggleFields() {
         <option value="Offline">From an offline source (e.g. a press ad) to a short URL</option>
         <option value="Rocketseed">Rocketseed banners</option>
         <option value="Referral">Referral from a news site etc.</option>
+        <option value="Unknown">Something else, not covered by the list above</option>
         </select>
         </label></p>
         
@@ -1179,6 +1221,43 @@ function toggleFields() {
         </label>
         </p>   
     </div>
+	<div id="mediumOther">
+		<p class="alert">All links made through this path will have the same source and medium. Only the creative and audience will be different, so be as specific as possible with them to ensure your data can be identified in reports.</p>
+        <p>
+		<input name="sourcecode" id="othersourcecode" value="170463" type="hidden">
+        </p>
+        <p>
+		<input name="source" id="othersource" value="Unknown" type="hidden">
+        </p>
+        <p>
+        <label for="audience">Who will see this link?
+        <input placeholder="e.g. the name of a corporate partner, an event, etc." name="audience" id="otheraudience" type="text">
+        </label>
+        </p>
+        <p>
+        <label for="linkcategory">What link from our site is being shared?
+        <select name="linkcategory" id="otherlinkcategory">
+		<option value="Donate Landing">Donate - Landing</option>
+		<option value="Donate Other">Donate - Other</option>
+		<option value="Get Help">Get help</option>
+		<option value="Get Involved">Get involved</option>
+		<option value="First Aid">First aid</option>
+		<option value="About Us">About Us</option>
+		<option value="Shop">Shop</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
+		<option value="Blog">Blog</option>
+		<option value="Webapps">Webapps</option>
+		<option value="Brand">Integrated campaign goal = brand</option>
+		<option value="Fundraising">Integrated campaign goal = fundraising</option>
+		</select>
+        </label>
+        </p>
+        <p>
+        <label for="linkdetails">What's the topic of the content the link is being added to?
+        <input placeholder="Short and sweet e.g. Aleppo attack, Donate email, Appeal launch" name="linkdetails" id="otherlinkdetails" type="text">
+        </label>
+        </p>
+    </div>
 	<div id="mediumRocketseed">
         <p>
         <label for="source">What platform is being used to show the banners?
@@ -1394,6 +1473,14 @@ function toggleFields() {
 					adCreative = adCreative + '_' + $('#offlinelinkdetails').val();}
 				sourceCode = $('#offlinesourcecode').val();
 				audience = $('#offlineaudience').val();
+				break;
+			case "Unknown":
+				source = $('#othersource').val();
+				adCreative = $('#otherlinkcategory').val();
+				if ($('#otherlinkdetails').val()) {
+					adCreative = adCreative + '_' + $('#otherlinkdetails').val();}
+				sourceCode = $('#othersourcecode').val();
+				audience = $('#otheraudience').val();
 				break;
 			case "Rocketseed":
 				source = $('#rocketseedsource').val();
