--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@ function toggleFields() {
         </p>   
     </div>
 	<div id="mediumOther">
-		<p class="alert">All links made through this path will have the same source and medium. Only the creative and audience will be different, so be as specific as possible with them to ensure your data can be identified in reports.</p>
+		<p class="alert">All links made through this path will have the same source and medium as each other. Only the audience (<em>Who will see this link?</em>) and creative (<em>What's the topic of the content the link is being added to?</em>) will be different. To ensure your data can be identified in reports, be as specific as possible with those two answers.</p>
         <p>
 		<input name="sourcecode" id="othersourcecode" value="170463" type="hidden">
         </p>
