DBAU-395 added options to email system dropdown

--- a/index.html
+++ b/index.html
@@ -689,12 +689,14 @@ function toggleFields() {
     
     <div id="mediumEmail">
         <p>
-        <label for="source">Which email system are we using for this send?
-        <select name="source" id="emailsource">
-    	<option value="Salesforce">Salesforce</option>
-    	<option value="Mailchimp">Mailchimp</option>
-		</select>
-        </label>
+	        <label for="source">Which email system are we using for this send?
+		        <select name="source" id="emailsource">
+			    	<option value="DotDigital">Dot Digital</option>
+			    	<option value="Hubspot">Hubspot</option>
+			    	<option value="Mailchimp">Mailchimp</option>
+			    	<option value="Salesforce">Salesforce</option>
+				</select>
+	        </label>
         </p>
         <p>
         <label for="emailsendname">What type of email is being sent?
